# controllers/productController.js
@@ -3,7 +3,7 @@
 var utils = require('../utils/writer.js');
 var Product = require('../service/productService');
 
-module.exports.apiCreateProductTokenPOST = function apiCreateProductTokenPOST(req, res, next) {
+module.exports.createProductPOST = function createProductPOST(req, res, next) {
     var token = req.swagger.params['token'].value;
     var nameProduct = req.swagger.params['nameProduct'].value;
     var information = req.swagger.params['information'].value;
@@ -14,8 +14,7 @@ module.exports.apiCreateProductTokenPOST = function apiCreateProductTokenPOST(re
     var image_1 = req.swagger.params['image_1'].value;
     var image_2 = req.swagger.params['image_2'].value;
     var image_3 = req.swagger.params['image_3'].value;
-    var edit = req.swagger.params['edit'].value;
-    Product.apiCreateProductTokenPOST(token, nameProduct, information, category, price, double, store, image_1, image_2, image_3, edit)
+    Product.createProductPOST(token, nameProduct, information, category, price, double, store, image_1, image_2, image_3)
         .then(function (response) {
             utils.writeJson(res, response);
         })
@@ -24,12 +23,31 @@ module.exports.apiCreateProductTokenPOST = function apiCreateProductTokenPOST(re
         });
 };
 
-module.exports.apiGetProductTokenStartIdAmountGET = function apiGetProductTokenStartIdAmountGET(req, res, next) {
+module.exports.updateProductPOST = function updateProductPOST(req, res, next) {
     var token = req.swagger.params['token'].value;
+    var nameProduct = req.swagger.params['nameProduct'].value;
+    var information = req.swagger.params['information'].value;
+    var category = req.swagger.params['category'].value;
+    var price = req.swagger.params['price'].value;
+    var double = req.swagger.params['double'].value;
+    var productID = req.swagger.params['productID'].value;
+    var image_1 = req.swagger.params['image_1'].value;
+    var image_2 = req.swagger.params['image_2'].value;
+    var image_3 = req.swagger.params['image_3'].value;
+    Product.updateProductPOST(token, nameProduct, information, category, price, double, productID, image_1, image_2, image_3)
+        .then(function (response) {
+            utils.writeJson(res, response);
+        })
+        .catch(function (response) {
+            utils.writeJson(res, response);
+        });
+};
+
+module.exports.listProductsGET = function listProductsGET(req, res, next) {
     var startId = req.swagger.params['startId'].value;
     var amount = req.swagger.params['amount'].value;
     var word = req.swagger.params['word'].value;
-    Product.apiGetProductTokenStartIdAmountGET(token, startId, amount, word)
+    Product.listProductsGET(startId, amount, word)
         .then(function (response) {
             utils.writeJson(res, response);
         })
